--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "html-react-parser": "^5.1.12"
   },
   "name": "kyakhanahai.com",
   "version": "1.0.0",
