--- a/kyakhanahai/package.json
+++ b/kyakhanahai/package.json
@@ -20,6 +20,7 @@
     "html-react-parser": "^5.1.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-image-crop": "^11.0.6",
     "react-router-dom": "^6.25.0",
     "styled-components": "^6.1.11"
   },
