--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.21.0",
+    "cloudinary-multer": "^1.0.2",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -18,6 +20,7 @@
     "express-session": "^1.18.0",
     "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
