--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
     "cloudinary": "^1.21.0",
     "cloudinary-multer": "^1.0.2",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
